[package]
name = "creditchain-rosetta-cli"
description = "CreditChain Rosetta CLI for testing"
version = "0.0.2"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-rosetta = { workspace = true }
creditchain-types = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

